--- a/app/index.html
+++ b/app/index.html
@@ -67,7 +67,7 @@
       <div ng-view=""></div>
 
       <div class="footer">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+        <p></span> footer stuff </p>
       </div>
     </div>
 
