Addlink : la description d'un lien est automatiquemennt parsée et ajoutée dans le form si elle existe

--- a/app/index.html
+++ b/app/index.html
@@ -53,8 +53,9 @@
         <a data-toggle="tab">Contact/About</a>
       </li>
       <li class="tabz">
-      <div class="tagsinput-primary tg">
-          <input name="tagsinput" class="tagsinput tg" data-role="tagsinput" value="tag,other" />
+		  <div class="tagsinput-primary tg">
+			  <input name="tagsinput" class="tagsinput tg" data-role="tagsinput" value="tag,other" />
+		  </div>
       </li>
 
     </ul>
