--- a/app/index.html
+++ b/app/index.html
@@ -47,7 +47,7 @@
         <a data-toggle="tab">Tools</a>
       </li>
       <li class="tabz">
-      <a href="/#/addlink" data-toggle="tab">add link</a>
+      <a href="/#addlink" data-toggle="tab">add link</a>
       </li>
       <li class="tabz">
         <a data-toggle="tab">Contact/About</a>
@@ -61,6 +61,7 @@
     </ul>
 
   </nav>
+
 
       <div ng-view=""></div>
 
