--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html class="no-js">
-  <head>
+<head>
     <meta charset="utf-8">
     <title></title>
     <meta name="description" content="">
@@ -17,87 +17,80 @@
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/styles.css">
-    <!-- endbuild -->
-  </head>
-  <body ng-app="yoslApp">
+    <!-- endbuild -->    
+</head>
+
+<body ng-app="yoslApp">
+
     <!--[if lt IE 7]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+    <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <!-- Add your site or application content here -->
+    <nav class="navbar navbar-inverse navbar-fixed-top size">
 
-                                                        
 
-<nav class="navbar navbar-inverse navbar-fixed-top size">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">Toggle navigation</button>
+            <a class="navbar-brand visible-xs" href="#">Security Links</a>
+        </div>
 
-	  
-	<div class="navbar-header">
-		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-			<span class="sr-only">Toggle navigation</span>
-		</button>
-      <a class="navbar-brand visible-xs" href="#">Security Links</a>
+        <div class="collapse navbar-collapse" id="navbar">
+
+            <ul class="nav navbar-nav">
+                <li class="active tabz" style="">
+                    <a ui-sref="home" data-toggle="tab" role="navigation">Boards</a>
+                </li>
+                <li>
+                    <a data-toggle="tab">Challenges</a>
+                </li>
+                <li>
+                    <a data-toggle="tab">IRCs</a>
+                </li>
+                <li>
+                    <a data-toggle="tab">VPNs</a>
+                </li>
+                <li>
+                    <a data-toggle="tab">Blogs</a>
+                </li>
+                <li>
+                    <a data-toggle="tab">Tools</a>
+                </li>
+                <li>
+                    <a ui-sref="addlink" data-toggle="tab">add link</a>
+                </li>   
+                <li>
+                    <a data-toggle="tab">Contact/About</a>
+                </li>
+            </ul>
+            <!--button type="button" class="btn btn-inverse" data-container="body" data-toggle="popover" data-html="true" data-content='<div class="size">a</div>' data-placement="bottom" data-trigger="focus" >
+                Filters
+            </button-->
+
+            <form class="navbar-form navbar-right" role="search">
+                <div class="form-group">
+                    <label for="search" class="sr-only">Search</label>
+                    <input type="text" id="search" class="form-control" placeholder="Search">
+                </div>
+                <button type="submit" class="btn btn-default">Search</button>
+            </form>
+        </div>
+    </nav>
+
+    <div ui-view class="index size">
     </div>
-	
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-		<ul class="nav navbar-nav">
-		  <li class="active tabz" style="">
-			<a ui-sref="home" data-toggle="tab">Boards</a>
-		  </li>
-		  <li>
-			<a data-toggle="tab">Challenges</a>
-		  </li>
-		  <li>
-			<a data-toggle="tab">IRCs</a>
-		  </li>
-		  <li>
-			<a data-toggle="tab">VPNs</a>
-		  </li>
-		  <li>
-			<a data-toggle="tab">Blogs</a>
-		  </li>
-		  <li>
-			<a data-toggle="tab">Tools</a>
-		  </li>
-		  <li>
-		  <a ui-sref="addlink" data-toggle="tab">add link</a>
-		  </li>   
-		  <li>
-			<a data-toggle="tab">Contact/About</a>
-		  </li>
-		</ul>
-		
-		<form class="navbar-form navbar-right" role="search">
-			<div class="form-group">
-				<label for="search" class="sr-only">Search</label>
-				<input type="text" id="search" class="form-control" placeholder="Search">
-			</div>
-			<button type="submit" class="btn btn-default">Search</button>
-		</form>
-	</div>
-</nav>
-
-
-    <div ng-click="switchz()"class="bootstrap-switch-square">
-        <input type="checkbox" ng-model="show" ng-change="test" data-toggle="switch" data-on-text="Panel" data-off-text="Raw" data-off-color="primary" id="switch" />
-    </div>
-
-<div ui-view class="index size">
-</div>
-
-<a ui-sref="home">State 1</a>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-     <script>
-       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    <script>
+     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-       ga('create', 'UA-XXXXX-X');
-       ga('send', 'pageview');
-    </script>
+     ga('create', 'UA-XXXXX-X');
+     ga('send', 'pageview');
+ </script>
 
-    <!--[if lt IE 9]>
+<!--[if lt IE 9]>
     <script src="bower_components/es5-shim/es5-shim.js"></script>
     <script src="bower_components/json3/lib/json3.min.js"></script>
     <![endif]-->
@@ -113,19 +106,19 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
-    <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/videojs/dist/video-js/video.js"></script>
     <script src="bower_components/flat-ui/dist/js/flat-ui.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
-        <!-- build:js({.tmp,app}) scripts/scripts.js -->
-        <script src="scripts/app.js"></script>
-        <script src="scripts/controllers/main.js"></script>
-        <script src="scripts/controllers/about.js"></script>
-        <script src="scripts/controllers/addlink.js"></script>
-        <script src="scripts/controllers/home.js"></script>
-        <!-- endbuild -->
+    <!-- build:js({.tmp,app}) scripts/scripts.js -->
+    <script src="scripts/app.js"></script>
+    <script src="scripts/controllers/main.js"></script>
+    <script src="scripts/controllers/about.js"></script>
+    <script src="scripts/controllers/addlink.js"></script>
+    <script src="scripts/controllers/home.js"></script>
+    <script src="scripts/controllers/filters.js"></script>
+    <!-- endbuild -->
 </body>
 </html>
