--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html class="no-js">
+
 <head>
     <meta charset="utf-8">
     <title></title>
@@ -12,21 +13,22 @@
     <link rel="stylesheet" href="bower_components/videojs/dist/video-js/video-js.css" />
     <link rel="stylesheet" href="bower_components/flat-ui/dist/css/flat-ui.css" />
     <link rel="stylesheet" href="bower_components/semantic-ui-flag/flag.css" />
+    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css" />
+    <link rel="stylesheet" href="bower_components/eeh-navigation/dist/eeh-navigation.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/styles.css">
-    <!-- endbuild -->    
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <!-- endbuild -->
 </head>
 
 <body ng-app="yoslApp">
-
     <!--[if lt IE 7]>
     <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-
-    <nav class="navbar navbar-inverse navbar-fixed-top size">
+    <!-- <nav class="navbar navbar-inverse navbar-fixed-top size">
 
 
         <div class="navbar-header">
@@ -61,12 +63,11 @@
                 <li>
                     <a data-toggle="tab">Contact/About</a>
                 </li>
-            </ul>
-            <!--button type="button" class="btn btn-inverse" data-container="body" data-toggle="popover" data-html="true" data-content='<div class="size">a</div>' data-placement="bottom" data-trigger="focus" >
+            </ul> -->
+    <!--button type="button" class="btn btn-inverse" data-container="body" data-toggle="popover" data-html="true" data-content='<div class="size">a</div>' data-placement="bottom" data-trigger="focus" >
                 Filters
             </button-->
-
-            <form class="navbar-form navbar-right" role="search">
+    <!-- <form class="navbar-form navbar-right" role="search">
                 <div class="form-group">
                     <label for="search" class="sr-only">Search</label>
                     <input type="text" id="search" class="form-control" placeholder="Search">
@@ -74,27 +75,32 @@
                 <button type="submit" class="btn btn-default">Search</button>
             </form>
         </div>
-    </nav>
-
-    <div ui-view class="index size">
+    </nav> -->
+        <eeh-navigation>
+            <div ui-view class="index size"></div>
+        </eeh-navigation>
     </div>
-
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
     <script>
-     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    (function(i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function() {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-     ga('create', 'UA-XXXXX-X');
-     ga('send', 'pageview');
- </script>
-
-<!--[if lt IE 9]>
+    ga('create', 'UA-XXXXX-X');
+    ga('send', 'pageview');
+    </script>
+    <!--[if lt IE 9]>
     <script src="bower_components/es5-shim/es5-shim.js"></script>
     <script src="bower_components/json3/lib/json3.min.js"></script>
     <![endif]-->
-
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
@@ -109,9 +115,12 @@
     <script src="bower_components/videojs/dist/video-js/video.js"></script>
     <script src="bower_components/flat-ui/dist/js/flat-ui.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="bower_components/angular-translate/angular-translate.js"></script>
+    <script src="bower_components/eeh-navigation/dist/eeh-navigation.js"></script>
+    <script src="bower_components/eeh-navigation/dist/eeh-navigation.tpl.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
-
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
@@ -121,4 +130,5 @@
     <script src="scripts/controllers/filters.js"></script>
     <!-- endbuild -->
 </body>
+
 </html>
