--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <!-- endbuild -->
 </head>
-<body ng-app="yoslApp">
+<body class="pml-open" ng-app="yoslApp">
 
     <!--[if lt IE 7]>
     <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
@@ -76,10 +76,19 @@
             </form>
         </div>
     </nav> -->
-        <eeh-navigation>
+<!--         <eeh-navigation>
             <div ui-view class="index size"></div>
-        </eeh-navigation>
-
+        </eeh-navigation> -->
+<div>
+        <nav class="menu push-menu-left">
+        <h3> Title </h3>
+    <a ui-sref="home">Board</a><br>
+    <a ui-sref="addlink">Addlink</a><br>
+    <a ui-sref="#">IRC</a><br>
+        </nav>
+        </div>
+    <div ui-view></div>
+<button class="nav-toggler toggle-push-left">Push Menu Left</button>
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
     <script> 
     (function(i, s, o, g, r, a, m) {
