--- a/app/index.html
+++ b/app/index.html
@@ -17,13 +17,15 @@
     <link rel="stylesheet" href="bower_components/eeh-navigation/dist/eeh-navigation.css" />
     <!-- endbower -->
     <!-- endbuild -->
-    <!-- build:css(.tmp) styles/main.css -->
+   <!-- build:css(.tmp) styles/main.css -->
+    <script src="bower_components/jquery/dist/jquery.js"></script>
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="bower_components/startbootstrap-simple-sidebar/css/simple-sidebar.css" />
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <!-- endbuild -->
 </head>
-<body class="pml-open" ng-app="yoslApp">
+<body class="" ng-app="yoslApp">
 
     <!--[if lt IE 7]>
     <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
@@ -76,20 +78,90 @@
             </form>
         </div>
     </nav> -->
-<!--         <eeh-navigation>
-            <div ui-view class="index size"></div>
-        </eeh-navigation> -->
-<div>
-        <nav class="menu push-menu-left">
-        <h3> Title </h3>
-    <a ui-sref="home">Board</a><br>
-    <a ui-sref="addlink">Addlink</a><br>
-    <a ui-sref="#">IRC</a><br>
-        </nav>
+
+
+
+
+    <div class="" id="wrapper">
+
+        <!-- Sidebar -->
+        <div id="sidebar-wrapper">
+            <ul class="sidebar-nav">
+                <li class="sidebar-brand">
+                    <a href="#">
+                     Sec Links
+                    </a>
+                </li>
+                <li>
+                    <a href="#">Boards</a>
+                </li>
+                <li>
+                    <a href="#">Blogs</a>
+                </li>
+                <li>
+                    <a href="#">Challenges</a>
+                </li>
+                <li>
+                    <a href="#">Events</a>
+                </li>
+                <li data-toggle="collapse" data-target="#service" class="collapsed">
+                  <a href="#"><i class="fa fa-globe fa-lg"></i> Languages <span class="arrow"></span></a>
+                </li>  
+                                <ul class="sub-menu collapse" id="service">
+                  <li>New Service 1</li>
+                  <li>New Service 2</li>
+                  <li>New Service 3</li>
+                </ul>
+
+                <li>
+                    <a href="#">About</a>
+                </li>
+                <li>
+                    <a href="#">Services</a>
+                </li>
+                <li>
+                    <a href="#">Contact</a>
+                </li>
+            <li>
+                <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>
+            </li>
+            </ul>
+
         </div>
-    <div ui-view></div>
-<button class="nav-toggler toggle-push-left">Push Menu Left</button>
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
+        <!-- /#sidebar-wrapper -->
+
+        <!-- Page Content -->
+        <div id="page-content-wrapper">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <h1>Simple Sidebar</h1>
+                        <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas.</p>
+                        <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
+
+
+
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- /#page-content-wrapper -->
+
+    </div>
+    <!-- /#wrapper -->
+
+
+    <script>
+    $("#menu-toggle").click(function(e) {
+        e.preventDefault();
+        $("#wrapper").toggleClass("toggled");
+    });
+    </script>
+
+
+
+
+
     <script> 
     (function(i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
@@ -112,7 +184,6 @@
     <![endif]-->
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
-    <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/json3/lib/json3.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
