--- a/app/index.html
+++ b/app/index.html
@@ -27,59 +27,6 @@
 </head>
 <body class="" ng-app="yoslApp">
 
-    <!--[if lt IE 7]>
-    <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
-    <!-- <nav class="navbar navbar-inverse navbar-fixed-top size">
-
-
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">Toggle navigation</button>
-            <a class="navbar-brand visible-xs" href="#">Security Links</a>
-        </div>
-
-        <div class="collapse navbar-collapse" id="navbar">
-
-            <ul class="nav navbar-nav">
-                <li class="active tabz" style="">
-                    <a ui-sref="home" data-toggle="tab" role="navigation">Boards</a>
-                </li>
-                <li>
-                    <a data-toggle="tab">Challenges</a>
-                </li>
-                <li>
-                    <a data-toggle="tab">IRCs</a>
-                </li>
-                <li>
-                    <a data-toggle="tab">VPNs</a>
-                </li>
-                <li>
-                    <a data-toggle="tab">Blogs</a>
-                </li>
-                <li>
-                    <a data-toggle="tab">Tools</a>
-                </li>
-                <li>
-                    <a ui-sref="addlink" data-toggle="tab">add link</a>
-                </li>   
-                <li>
-                    <a data-toggle="tab">Contact/About</a>
-                </li>
-            </ul> -->
-    <!--button type="button" class="btn btn-inverse" data-container="body" data-toggle="popover" data-html="true" data-content='<div class="size">a</div>' data-placement="bottom" data-trigger="focus" >
-                Filters
-            </button-->
-    <!-- <form class="navbar-form navbar-right" role="search">
-                <div class="form-group">
-                    <label for="search" class="sr-only">Search</label>
-                    <input type="text" id="search" class="form-control" placeholder="Search">
-                </div>
-                <button type="submit" class="btn btn-default">Search</button>
-            </form>
-        </div>
-    </nav> -->
-
-
 
 
     <div class="" id="wrapper">
@@ -93,23 +40,23 @@
                     </a>
                 </li>
                 <li>
-                    <a ui-sref="home"><i class="fa fa-globe fa-2x"></i> Boards</a>
+                    <a ui-sref="home" class="menutxt"><i class="fa fa-globe fa-2x"></i>  Boards</a>
                 </li>
                 <li>
-                    <a href="#"><i class="fa fa-book fa-2x"></i> Blogs</a>
+                    <a href="#" class="menutxt"><i class="fa fa-book fa-2x"></i>  Blogs</a>
                 </li>                
                 <li>
-                    <a href="#"><i class="fa fa-group fa-2x"></i> IRCs</a>
+                    <a href="#" class="menutxt"><i class="fa fa-group fa-2x"></i>  IRCs</a>
                 </li>
                 <li>
-                    <a href="#"><i class="fa fa-trophy fa-2x"></i> Challenges</a>
+                    <a href="#" class="menutxt"><i class="fa fa-trophy fa-2x"></i>  Challenges</a>
                 </li>
 
                 <li>
-                    <a ui-sref="addlink"> <i class="fa fa-plus fa-2x"></i> Add Links</a>
+                    <a ui-sref="addlink" class="menutxt"> <i class="fa fa-plus fa-2x"></i>  Add Links</a>
                 </li>
                 <li data-toggle="collapse" data-target="#service" class="collapsed">
-                  <a href="#"><i class="fa fa-flag fa-2x"></i> Languages <span class="arrow"></span></a>
+                  <a href="#" class="menutxt"><i class="fa fa-flag fa-2x"></i> Languages <span class="arrow"></span></a>
                 </li>  
                 <ul class="sub-menu collapse" id="service">
                   <li>New Service 1</li>
@@ -118,11 +65,11 @@
                 </ul>
 
                 <li>
-                    <a href="#">About</a>
+                    <a href="#" class="menutxt">  About</a>
                 </li>
 
             <li>
-                <a href=""><i class="fa fa-chevron-left fa-lg" id="menu-toggle"></i> </a>
+                <a href="" class="fleched" id="fl"><i class="fa fa-chevron-left fa-lg " id="menu-toggle" ></i> </a>
             </li>
             </ul>
 
@@ -141,7 +88,9 @@
     $("#menu-toggle").click(function(e) {
         e.preventDefault();
         $("#wrapper").toggleClass("toggled");
-        $('#menu-toggle').toggleClass("fa-chevron-right");
+        $('#menu-toggle').toggleClass("fa-chevron-right"); 
+        $('#fl').toggleClass("fleched",false); //faire un if ou
+        $('#fl').toggleClass("fleche",true);
     });
     </script>  
 
