--- a/app/index.html
+++ b/app/index.html
@@ -13,8 +13,6 @@
     <link rel="stylesheet" href="bower_components/videojs/dist/video-js/video-js.css" />
     <link rel="stylesheet" href="bower_components/flat-ui/dist/css/flat-ui.css" />
     <link rel="stylesheet" href="bower_components/semantic-ui-flag/flag.css" />
-    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css" />
-    <link rel="stylesheet" href="bower_components/eeh-navigation/dist/eeh-navigation.css" />
     <!-- endbower -->
     <!-- endbuild -->
    <!-- build:css(.tmp) styles/main.css -->
@@ -35,7 +33,7 @@
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
-                    <a href="#">
+                    <a hui-sref="state">
                      Sec Links
                     </a>
                 </li>
@@ -122,6 +120,9 @@
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+
+
     <script src="bower_components/json3/lib/json3.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="bower_components/angular-resource/angular-resource.js"></script>
@@ -131,11 +132,7 @@
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/videojs/dist/video-js/video.js"></script>
     <script src="bower_components/flat-ui/dist/js/flat-ui.js"></script>
-    <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
-    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-    <script src="bower_components/angular-translate/angular-translate.js"></script>
-    <script src="bower_components/eeh-navigation/dist/eeh-navigation.js"></script>
-    <script src="bower_components/eeh-navigation/dist/eeh-navigation.tpl.js"></script>
+
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
