--- a/app/index.html
+++ b/app/index.html
@@ -1,148 +1,129 @@
 <!doctype html>
 <html class="no-js">
-
-<head>
-    <meta charset="utf-8">
-    <title></title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <!-- build:css(.) styles/vendor.css -->
-    <!-- bower:css -->
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
-    <link rel="stylesheet" href="bower_components/videojs/dist/video-js/video-js.css" />
-    <link rel="stylesheet" href="bower_components/flat-ui/dist/css/flat-ui.css" />
-    <link rel="stylesheet" href="bower_components/semantic-ui-flag/flag.css" />
-    <!-- endbower -->
-    <!-- endbuild -->
-   <!-- build:css(.tmp) styles/main.css -->
-    <script src="bower_components/jquery/dist/jquery.js"></script>
-    <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/styles.css">
-    <link rel="stylesheet" href="styles/simple-sidebar.css" />
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    <!-- endbuild -->
-</head>
-<body class="" ng-app="yoslApp">
-
-
-
-    <div class="" id="wrapper">
-
-        <!-- Sidebar -->
-        <div id="sidebar-wrapper">
-            <ul class="sidebar-nav">
-                <li class="sidebar-brand">
-                    <a hui-sref="state">
-                     Sec Links
-                    </a>
-                </li>
-                <li>
-                    <a ui-sref="home" class="menutxt"><i class="fa fa-globe fa-2x"></i>  Boards</a>
-                </li>
-                <li>
-                    <a href="#" class="menutxt"><i class="fa fa-book fa-2x"></i>  Blogs</a>
-                </li>                
-                <li>
-                    <a href="#" class="menutxt"><i class="fa fa-group fa-2x"></i>  IRCs</a>
-                </li>
-                <li>
-                    <a href="#" class="menutxt"><i class="fa fa-trophy fa-2x"></i>  Challenges</a>
-                </li>
-
-                <li>
-                    <a ui-sref="addlink" class="menutxt"> <i class="fa fa-plus fa-2x"></i>  Add Links</a>
-                </li>
-                <li data-toggle="collapse" data-target="#service" class="collapsed">
-                  <a href="#" class="menutxt"><i class="fa fa-flag fa-2x"></i> Languages <span class="arrow"></span></a>
-                </li>  
-                <ul class="sub-menu collapse" id="service">
-                  <li>New Service 1</li>
-                  <li>New Service 2</li>
-                  <li>New Service 3</li>
+    <head>
+        <meta charset="utf-8">
+        <title></title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width">
+        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+        <!-- build:css(.) styles/vendor.css -->
+        <!-- bower:css -->
+        <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
+        <link rel="stylesheet" href="bower_components/videojs/dist/video-js/video-js.css" />
+        <link rel="stylesheet" href="bower_components/flat-ui/dist/css/flat-ui.css" />
+        <link rel="stylesheet" href="bower_components/semantic-ui-flag/flag.css" />
+        <!-- endbower -->
+        <!-- endbuild -->
+        <!-- build:css(.tmp) styles/main.css -->
+        <script src="bower_components/jquery/dist/jquery.js"></script>
+        <link rel="stylesheet" href="styles/main.css">
+        <link rel="stylesheet" href="styles/styles.css">
+        <link rel="stylesheet" href="styles/simple-sidebar.css" />
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+        <!-- endbuild -->
+    </head>
+    <body class="" ng-app="yoslApp">
+        <div class="" id="wrapper">
+            <!-- Sidebar -->
+            <nav>
+            <div id="sidebar-wrapper">
+                <ul class="sidebar-nav">
+                    <li class="sidebar-brand">
+                        <a hui-sref="state">
+                            Sec Links
+                        </a>
+                    </li>
+                    <li>
+                        <a ui-sref="home"><i class="fa fa-globe fa-2x fa-fw"></i><span class="menutxt">Boards</span></a>
+                    </li>
+                    <li>
+                        <a href="blogs"><i class="fa fa-book fa-2x fa-fw"></i><span class="menutxt">Blogs</span></a>
+                    </li>
+                    <li>
+                        <a href=""><i class="fa fa-book fa-2x fa-fw"></i><span class="menutxt">Websites</span></a>
+                    </li>
+                    <li>
+                        <a href="#"><i class="fa fa-group fa-2x fa-fw"></i><span class="menutxt">IRCs</span></a>
+                    </li>
+                    <li>
+                        <a href="#"><i class="fa fa-trophy fa-2x fa-fw"></i><span class="menutxt">Challenges</span></a>
+                    </li>
+                    <li>
+                        <a ui-sref="addlink"> <i class="fa fa-plus fa-2x fa-fw"></i><span class="menutxt">Add Links</span></a>
+                    </li>
+                    <li data-toggle="collapse" data-target="#service" class="collapsed">
+                        <a href="#"><i class="fa fa-flag fa-2x fa-fw"></i><span class="menutxt">Languages</span><span class="arrow"></span></a>
+                    </li>
+                    <ul class="sub-menu collapse" id="service">
+                        <li>New Service 1</li>
+                        <li>New Service 2</li>
+                        <li>New Service 3</li>
+                    </ul>
+                    <li>
+                        <a href="#"><span class="menutxt">About</span></a>
+                    </li>
+                    <li>
+                        <a href="" class="fleched" id="fl"><i class="fa fa-chevron-left fa-lg fa-fw" id="menu-toggle" ></i> </a>
+                    </li>
                 </ul>
-
-                <li>
-                    <a href="#" class="menutxt">  About</a>
-                </li>
-
-            <li>
-                <a href="" class="fleched" id="fl"><i class="fa fa-chevron-left fa-lg " id="menu-toggle" ></i> </a>
-            </li>
-            </ul>
-
+            </div>
+            </nav>
+            <!-- /#sidebar-wrapper -->
+            <!-- Page Content -->
+            <div class="ui-view"></div>
+            <!-- /#page-content-wrapper -->
         </div>
-        <!-- /#sidebar-wrapper -->
-
-        <!-- Page Content -->
-        <div class="ui-view"></div>
-        <!-- /#page-content-wrapper -->
-
-    </div>
-    <!-- /#wrapper -->
-
-
-    <script>
-    $("#menu-toggle").click(function(e) {
+        <!-- /#wrapper -->
+        <script>
+        $("#menu-toggle").click(function(e) {
         e.preventDefault();
         $("#wrapper").toggleClass("toggled");
-        $('#menu-toggle').toggleClass("fa-chevron-right"); 
+        $('#menu-toggle').toggleClass("fa-chevron-right");
         $('#fl').toggleClass("fleched",false); //faire un if ou
         $('#fl').toggleClass("fleche",true);
-    });
-    </script>  
-
-
-
-
-
-
-    <script> 
-    (function(i, s, o, g, r, a, m) {
+        });
+        </script>
+        <script>
+        (function(i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
         i[r] = i[r] || function() {
-            (i[r].q = i[r].q || []).push(arguments)
+        (i[r].q = i[r].q || []).push(arguments)
         }, i[r].l = 1 * new Date();
         a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0];
+        m = s.getElementsByTagName(o)[0];
         a.async = 1;
         a.src = g;
         m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-
-    ga('create', 'UA-XXXXX-X');
-    ga('send', 'pageview');
-    </script>
-    <!--[if lt IE 9]>
-    <script src="bower_components/es5-shim/es5-shim.js"></script>
-    <script src="bower_components/json3/lib/json3.min.js"></script>
-    <![endif]-->
-    <!-- build:js(.) scripts/vendor.js -->
-    <!-- bower:js -->
-    <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
-
-
-    <script src="bower_components/json3/lib/json3.js"></script>
-    <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
-    <script src="bower_components/angular-resource/angular-resource.js"></script>
-    <script src="bower_components/angular-cookies/angular-cookies.js"></script>
-    <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
-    <script src="bower_components/angular-animate/angular-animate.js"></script>
-    <script src="bower_components/angular-touch/angular-touch.js"></script>
-    <script src="bower_components/videojs/dist/video-js/video.js"></script>
-    <script src="bower_components/flat-ui/dist/js/flat-ui.js"></script>
-
-    <!-- endbower -->
-    <!-- endbuild -->
-    <!-- build:js({.tmp,app}) scripts/scripts.js -->
-    <script src="scripts/app.js"></script>
-    <script src="scripts/controllers/main.js"></script>
-    <script src="scripts/controllers/about.js"></script>
-    <script src="scripts/controllers/addlink.js"></script>
-    <script src="scripts/controllers/home.js"></script>
-    <script src="scripts/controllers/filters.js"></script>
-    <!-- endbuild -->
-</body>
-
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+        ga('create', 'UA-XXXXX-X');
+        ga('send', 'pageview');
+        </script>
+        <!--[if lt IE 9]>
+        <script src="bower_components/es5-shim/es5-shim.js"></script>
+        <script src="bower_components/json3/lib/json3.min.js"></script>
+        <![endif]-->
+        <!-- build:js(.) scripts/vendor.js -->
+        <!-- bower:js -->
+        <script src="bower_components/angular/angular.js"></script>
+        <script src="bower_components/json3/lib/json3.js"></script>
+        <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+        <script src="bower_components/angular-resource/angular-resource.js"></script>
+        <script src="bower_components/angular-cookies/angular-cookies.js"></script>
+        <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+        <script src="bower_components/angular-animate/angular-animate.js"></script>
+        <script src="bower_components/angular-touch/angular-touch.js"></script>
+        <script src="bower_components/videojs/dist/video-js/video.js"></script>
+        <script src="bower_components/flat-ui/dist/js/flat-ui.js"></script>
+        <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+        <!-- endbower -->
+        <!-- endbuild -->
+        <!-- build:js({.tmp,app}) scripts/scripts.js -->
+        <script src="scripts/app.js"></script>
+        <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/addlink.js"></script>
+        <script src="scripts/controllers/home.js"></script>
+        <script src="scripts/controllers/filters.js"></script>
+        <!-- endbuild -->
+    </body>
 </html>
