--- a/app/index.html
+++ b/app/index.html
@@ -30,20 +30,21 @@
                 <ul class="sidebar-nav">
                     <li class="sidebar-brand">
                         <a hui-sref="state">
+                        <i class="fa fa-user-secret fa-2x fa-fw"></i>
                             Sec Links
                         </a>
                     </li>
                     <li>
-                        <a ui-sref="home"><i class="fa fa-globe fa-2x fa-fw"></i><span class="menutxt">Boards</span></a>
+                        <a ui-sref="home"><i class="fa fa-leanpub fa-2x fa-fw"></i><span class="menutxt">Boards</span></a>
                     </li>
                     <li>
-                        <a href="blogs"><i class="fa fa-book fa-2x fa-fw"></i><span class="menutxt">Blogs</span></a>
+                        <a href="blogs"><i class="fa fa-keyboard-o fa-2x fa-fw"></i><span class="menutxt">Blogs</span></a>
                     </li>
                     <li>
-                        <a href=""><i class="fa fa-book fa-2x fa-fw"></i><span class="menutxt">Websites</span></a>
+                        <a href=""><i class="fa fa-globe fa-2x fa-fw"></i><span class="menutxt">Websites</span></a>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-group fa-2x fa-fw"></i><span class="menutxt">IRCs</span></a>
+                        <a href="#"><i class="fa fa-wechat fa-2x fa-fw"></i><span class="menutxt">IRCs</span></a>
                     </li>
                     <li>
                         <a href="#"><i class="fa fa-trophy fa-2x fa-fw"></i><span class="menutxt">Challenges</span></a>
