--- a/app/index.html
+++ b/app/index.html
@@ -71,7 +71,10 @@
             </nav>
             <!-- /#sidebar-wrapper -->
             <!-- Page Content -->
+
             <div class="ui-view"></div>
+
+
             <!-- /#page-content-wrapper -->
         </div>
         <!-- /#wrapper -->
@@ -116,6 +119,7 @@
         <script src="bower_components/videojs/dist/video-js/video.js"></script>
         <script src="bower_components/flat-ui/dist/js/flat-ui.js"></script>
         <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+        <script src="bower_components/angular-deckgrid/angular-deckgrid.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
